--- a/PersonalSite/Shared/CoverLayout.razor
+++ b/PersonalSite/Shared/CoverLayout.razor
@@ -1,11 +1,9 @@
 @inherits LayoutComponentBase
 
-<header class="mb-auto">
-    <div>
-        <NavMenu />
-    </div>
-</header>
+<NavMenu />
 
-<main class="w-100" style="padding-top: 58px">
+<main class="w-100 bg-body pb-5" style="padding-top: 58px">
     @Body
 </main>
+
+<Footer />
