--- a/PersonalSite/Pages/Home.razor
+++ b/PersonalSite/Pages/Home.razor
@@ -21,7 +21,7 @@
 
 </div>
 
-<section id="who-am-i" class="context" style="padding-top: 0 !important; padding:50px 15px;text-align: start;">
+<section id="who-am-i" class="context" style="padding-top: 55px !important; padding:50px 15px;text-align: start;">
     <div class="container">
         <div class="col mx-auto mt-4" style="max-width: 640px">
               <h3 style="text-align:center;">Who am I?</h3>
@@ -39,11 +39,7 @@
     </div>
 </section>
 
-  <footer class="pt-3 pb-3 px-4 my-5 mx-auto w-100 container text-center">
-      <small class="text-muted">© @DateTime.Now.Year Marina Sundström | Built with .NET & Blazor - Hosted by GitHub Pages</small>
-  </footer>
-
-  @code {
+@code {
     protected override async Task OnAfterRenderAsync(bool firstRender) 
     {
         if(firstRender) 
