--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -50,7 +50,7 @@ else
 
             </div>
 
-            <div class="mt-4 inner container">
+            <div class="inner container">
                 <MarkdownView Content="@post.Content" />
 
                 @if (isBlog)
