Remove cards in Resumé to free up space

--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -1,6 +1,6 @@
 @using PersonalSite.Markdown
 
-<div class="col card-group">
+<div class="col card-group mt-4 mt-md-5">
     <div class="card shadow-sm">
 
         <a href="@Project.Image" target="_blank">
