--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -33,28 +33,28 @@
             <hr class="d-md-none text-white-50">
             <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
                 <ThemeSelector />
-                <li class="nav-item list-inline-item">
+                <li class="nav-item list-inline-item me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                         href="https://github.com/marinasundstrom" title="GitHub" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
 
-                <li class="nav-item list-inline-item">
+                <li class="nav-item list-inline-item me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                         href="https://www.youtube.com/channel/UCVdav9wE4kmtiEuk1_vG2_g" target="_blank">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </li>
 
-                <li class="nav-item list-inline-item">
+                <li class="nav-item list-inline-item me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                         href="https://twitter.com/marna_li" title="X" target="_blank">
                         <i class="fab fa-x-twitter"></i>
                     </a>
                 </li>
 
-                <li class="nav-item list-inline-item">
+                <li class="nav-item list-inline-ite me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                         href="https://www.linkedin.com/in/marinasundstrom" title="LinkedIn" target="_blank">
                         <i class="fab fa-linkedin"></i>
