--- a/PersonalSite/Shared/ThemeSelector.razor
+++ b/PersonalSite/Shared/ThemeSelector.razor
@@ -14,13 +14,13 @@
       </symbol>
 </svg>
 
-<li class="nav-item dropdown bd-mode-toggle theme-selector">
+<li class="nav-item dropdown bd-mode-toggle theme-selector me-4 me-md-0">
   <a class="nav-link btn-bd-primary py-2 dropdown-toggle d-flex align-items-center opacity-50"
           id="bd-theme"
           aria-expanded="false"
           data-bs-toggle="dropdown"
           aria-label="Toggle theme (auto)">
-      <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
+      <svg class="bi my-special theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
       <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
   </a>
   <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
