--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -246,3 +246,8 @@ ul li, ol li {
 h1 {
   font-weight: normal;
 }
+
+.my-special {
+  margin-top: .134rem!important;
+  margin-bottom: .25rem!important;
+}
