--- a/PersonalSite/Shared/Footer.razor
+++ b/PersonalSite/Shared/Footer.razor
@@ -10,7 +10,7 @@
                         A personal website and blog about life and software development
                     </li>
                     <li class="mb-2">
-                        Code provided with no warranty
+                        Code is provided with no warranty.
                     </li>
                 </ul>
             </div>
@@ -19,6 +19,7 @@
                 <ul class="list-unstyled menu">
                     <li class="mb-2"><a href="/about-me">About me</a></li>
                     <li class="mb-2"><a href="/articles">Articles</a></li>
+                    <li class="mb-2"><a href="/resume">Resume</a></li>
                     <li class="mb-2"><a href="/portflio">Portfolio</a></li>
                 </ul>
             </div>
@@ -59,7 +60,7 @@
             <p class="float-end mb-1">
                 <a id="scrollToTop" href="#" @onclick="ScrollToTop" @onclick:preventDefault>Back to top</a>
             </p>
-            <p class="muted small mb-1">© @DateTime.Now.Year Marina Sundström | Built with .NET & Blazor - Hosted by GitHub Pages</p>
+            <p class="muted small mb-1">© @DateTime.Now.Year Marina Sundström &bullet; Built with .NET & Blazor - Hosted by GitHub Pages</p>
         </div>
     </div>
 </footer>
