--- a/PersonalSite/Shared/Footer.razor
+++ b/PersonalSite/Shared/Footer.razor
@@ -20,7 +20,7 @@
                     <li class="mb-2"><a href="/about-me">About me</a></li>
                     <li class="mb-2"><a href="/articles">Articles</a></li>
                     <li class="mb-2"><a href="/resume">Resume</a></li>
-                    <li class="mb-2"><a href="/portflio">Portfolio</a></li>
+                    <li class="mb-2"><a href="/portfolio">Portfolio</a></li>
                 </ul>
             </div>
             <div class="col-6 mb-3">
