--- a/PersonalSite/Pages/Resume/ExperienceList.razor.css
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor.css
@@ -14,10 +14,10 @@ ol.timeline {
 
 ol.timeline:before {
     content: ' ';
-    background: #d4d9df;
+    background: #8188e6;
     display: inline-block;
     position: absolute;
-    left: 29px;
+    left: 25px;
     width: 2px;
     height: 100%;
     z-index: 400;
@@ -34,12 +34,13 @@ ol.timeline > li h3 {
 
 ol.timeline > li:before {
     content: ' ';
-    background: white;
+    background: #8188e6;
     display: inline-block;
     position: absolute;
     border-radius: 50%;
-    border: 3px solid #22c0e8;
-    left: 20px;
+    border: 3px solid #8188e6;
+    top: -3px;
+    left: 16.1px;
     width: 20px;
     height: 20px;
     z-index: 400;
