--- a/PersonalSite/wwwroot/css/syntax.css
+++ b/PersonalSite/wwwroot/css/syntax.css
@@ -9,24 +9,17 @@ code, pre {
 }
 
 code.hljs {
-    padding: 0rem;
-    border: 1px solid rgb(199 199 199 / 70%);
     border-radius: 10px;
     overflow: auto;
-
-    /* background-color: #f9f9f9;
-    line-height: 1.4;
-    color: black;
-    */
+    background-color: #f3f3f3;
     margin: 0 0 1rem;
 
     box-shadow: 0 .125rem .25rem rgba(17, 17, 17, 0.075) !important;
 }
 
-code.hljs.language-undefined {
-    background-color: #ffffff;
-    color: black;
-    border: 1px solid rgb(199 199 199 / 70%);
+
+pre code.hljs {
+    padding: 1.5rem !important;
 }
 
 /*
