Update footer heading font color

--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -165,7 +165,7 @@ h1:focus {
 
 [data-bs-theme='dark'] .footer h4,
 [data-bs-theme='dark'] .footer h5  {
-  color: #bccdde;
+  color: #d2d2d2;
 }
 
 /* CUSTOM */
