--- a/PersonalSite/Pages/Resume/ExperienceView.razor
+++ b/PersonalSite/Pages/Resume/ExperienceView.razor
@@ -50,7 +50,7 @@ else
     {
         <dl>
             <dt>Key skills</dt>
-            <dd>
+            <dd style="padding-top: 0.8rem">
                 @foreach (var skillName in experience.Skills)
                 {
                     <div class="badge mini rounded-pill tag me-2 mb-2 text-decoration-none">
