--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -47,12 +47,12 @@
                     </a>
                 </li>
 
-                <li class="nav-item list-inline-item me-4 me-md-0">
+                @* <li class="nav-item list-inline-item me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                         href="https://twitter.com/marna_li" title="X" target="_blank">
                         <i class="fab fa-x-twitter"></i>
                     </a>
-                </li>
+                </li> *@
 
                 <li class="nav-item list-inline-ite me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
