--- a/PersonalSite/Pages/Home.razor
+++ b/PersonalSite/Pages/Home.razor
@@ -8,14 +8,21 @@
 
 <div class="bgimg-1">
 
-    <div class="text-center w-100 text-light caption" style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); padding-top: 200px;">
+    <div class="text-center w-100 text-light caption"
+        style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); padding-top: 200px;">
 
-        <img class="rounded-circle pulse" style="height: 200px; margin-bottom: 25px; border: 5px solid var(--brand-color);" src="/images/profile.jpeg" />
+        <img class="rounded-circle pulse"
+            style="height: 200px; margin-bottom: 25px; border: 5px solid var(--brand-color);"
+            src="/images/profile.jpeg" />
         <h1>Hi! I'm Marina 😊</h1>
         <p class="lead">I'm a Software Developer.</p>
         <p class="lead">
             <a href="#who-am-i" class="mt-4 custom btn btn-lg btn-secondary fw-bold">About me</a>
         </p>
+
+        <br />
+        <br />
+        <br />
 
     </div>
 
@@ -24,12 +31,14 @@
 <section id="who-am-i" class="context" style="padding-top: 55px !important; padding:50px 15px;text-align: start;">
     <div class="container">
         <div class="col mx-auto mt-4" style="max-width: 640px">
-              <h3 style="text-align:center;">Who am I?</h3>
-             <p>I'm a Software developer, based in <a target="_blank" href="https://www.google.se/maps/place/Malmö/@@55.5702455,12.9457618,12z/data=!3m1!4b1!4m5!3m4!1s0x465305a574c491ff:0xd3a905dfbd4888e5!8m2!3d55.604981!4d13.003822?hl=en">Malmö, Sweden</a>.</p>
+            <h3 style="text-align:center;">Who am I?</h3>
+            <p>I'm a software developer based in Malmö, Sweden.</p>
 
-            <p>I build awesome software for people. My main expertise is in C#/.NET and Web.</p>
+            <p>I specialize in C#/.NET and Web development, crafting software that’s not just functional but delightful
+                to use.</p>
 
-            <p>In my free time, I like taking walks in beautiful nature, philosophizing while enjoying a good cup of coffee, and making tasty cocktails.</p>
+            <p>Beyond coding, you’ll find me exploring beautiful nature on long walks, pondering life over a great cup
+                of coffee, or experimenting with new cocktail recipes.</p>
 
             <div class="d-flex justify-content-center">
                 <p><a class="btn btn-primary text-center mt-4" href="/presentation">Read more</a></p>
@@ -40,11 +49,11 @@
 </section>
 
 @code {
-    protected override async Task OnAfterRenderAsync(bool firstRender) 
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if(firstRender) 
+        if (firstRender)
         {
             await NavigationManager.NavigateToFragmentAsync(JS);
         }
     }
-  }
+}
