--- a/PersonalSite/Shared/Footer.razor
+++ b/PersonalSite/Shared/Footer.razor
@@ -35,17 +35,17 @@
 
                     <li class="nav-item list-inline-item">
                         <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                            href="https://www.youtube.com/channel/UCVdav9wE4kmtiEuk1_vG2_g" target="_blank">
+                            href="https://www.youtube.com/@@marna_li" target="_blank">
                             <i class="fab fa-2x fa-youtube"></i>
                         </a>
                     </li>
 
-                    @* <li class="nav-item list-inline-item">
+                    <li class="nav-item list-inline-item">
                         <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                             href="https://twitter.com/marna_li" title="X" target="_blank">
                             <i class="fab fa-2x fa-x-twitter"></i>
                         </a>
-                    </li> *@
+                    </li>
 
                     <li class="nav-item list-inline-item">
                         <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
