--- a/PersonalSite/Pages/Home.razor
+++ b/PersonalSite/Pages/Home.razor
@@ -8,8 +8,8 @@
 
 <div class="bgimg-1">
 
-    <div class="text-center w-100 text-light caption"
-        style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); padding-top: 200px;">
+    <div class="text-center w-100 text-light caption" style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); position: relative;
+            z-index: 1; /* Ensures text stays above the overlay */">
 
         <img class="rounded-circle pulse"
             style="height: 200px; margin-bottom: 25px; border: 5px solid var(--brand-color);"
