--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -11,6 +11,10 @@
   background-color: var(--brand-color) !important;
 }
 
+[data-bs-theme='dark'] .bg-brand {
+  background-color: #194e7e !important;
+}
+
 [data-bs-theme='light'] .bg-body-tertiary {
   background-color: rgb(247 247 247) !important;
 }
@@ -252,7 +256,7 @@ hr {
     padding-left: 1rem;
     overflow-y: auto;
     visibility: hidden;
-    background-color: var(--brand-color);
+    /* background-color: var(--brand-color); */
     transition: transform .3s ease-in-out, visibility .3s ease-in-out;
   }
 
@@ -313,6 +317,17 @@ ul li, ol li {
 }
 */
 
+[data-bs-theme='dark'] .bgimg-1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* Adjust darkness */
+}
+
 .bgimg-1,
 .bgimg-2,
 .bgimg-3 {
@@ -321,6 +336,9 @@ ul li, ol li {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .bgimg-1 {
