--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -1,23 +1,24 @@
 @using PersonalSite.Markdown
 
-<div class="col card-group mt-4 mt-md-5">
-    <div class="card shadow-sm">
-
+<div class="col card-group">
+    <div class="card p-4 shadow-sm rounded-4 bg-body-tertiary">
         <a href="@Project.Image" target="_blank">
             <img class="bd-placeholder-img card-img-top mt-3"
                 style="height: 200px; max-width: 100%; margin: auto; object-fit: contain;" src="@Project.Image" />
         </a>
-        <div class="card-body mt-2">
+        <div class="card-body mt-3">
             <h5 class="card-title">@Project.Name</h5>
             <div class="card-text small">
-                <p class="text-muted mt-1" style="height: auto;"> @if (Project.For is not null)
+                <p class="text-muted mt-1" style="height: auto;">
+                    @if (Project.For is not null)
                     {
                         @Project.For
                     }
                     else
                     {
                         @Project.Type
-                    } &bullet; @if (Project.Ongoing)
+                    }
+                    &bullet; @if(Project.Ongoing)
                     {
                         <text>From </text>
                     }
@@ -26,8 +27,9 @@
                         <text> - </text>
                         @Project.EndDate?.ToString("MMM yyyy")
                         ;
-                    }</p>
-                    
+                    }
+                </p>
+
                 <MarkdownView Content="@(Project.Description.Split('\n').First())" Truncate="true" />
 
                 <div class="tags mt-4">
@@ -49,31 +51,31 @@
             </div>
         </div>
         <div class="card-footer">
-                <div class="d-flex justify-content-between align-items-center py-2">
-                    <small></small>
-                    <div>
-                        @foreach (var link in Project.Links)
+            <div class="d-flex justify-content-between align-items-center py-2">
+                <small></small>
+                <div>
+                    @foreach (var link in Project.Links)
+                    {
+                        string icon = "fab fa-link";
+                        if (link.Type.Contains("YouTube"))
                         {
-                            string icon = "fab fa-link";
-                            if (link.Type.Contains("YouTube"))
-                            {
-                                icon = "fab fa-youtube";
-                            }
-                            else if (link.Type.Contains("GitHub"))
-                            {
-                                icon = "fab fa-github";
-                            }
-                            else if (link.Type.Contains("Link"))
-                            {
-                                icon = "fas fa-link";
-                            }
-                            <a class="btn btn-sm btn-outline-secondary ms-2" alt="@link.Name" href="@link.Url"
-                                target="_blank"><i class="@icon fa-lg"></i></a>
+                            icon = "fab fa-youtube";
                         }
-                    </div>
-                    @* <small class="text-muted">9 mins</small> *@
+                        else if (link.Type.Contains("GitHub"))
+                        {
+                            icon = "fab fa-github";
+                        }
+                        else if (link.Type.Contains("Link"))
+                        {
+                            icon = "fas fa-link";
+                        }
+                        <a class="btn btn-sm btn-outline-secondary border-0 ms-2" title="@link.Name" href="@link.Url"
+                            target="_blank"><i class="@icon fa-lg"></i></a>
+                    }
                 </div>
+                @* <small class="text-muted">9 mins</small> *@
             </div>
+        </div>
     </div>
 </div>
 
