--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@using System.Runtime.InteropServices.JavaScript
 
-<header class="navbar navbar-expand-lg fixed-top navbar-dark bg-brand">
-    <nav class="container px-4 px-md-3 flex-wrap flex-md-nowrap" aria-label="Main navigation">
+<header class="navbar navbar-expand-lg fixed-top navbar-dark bg-brand shadow-sm">
+    <nav class=" container px-4 px-md-3 flex-wrap flex-md-nowrap" aria-label="Main navigation">
         <NavLink class="navbar-brand mr-auto mr-lg-0" href="" Match=@NavLinkMatch.All>
             <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile"
                 style="margin-right: 10px; height: 32px; font-weight: 700" />
