--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -1,9 +1,9 @@
 @using PersonalSite.Markdown
 
 <div class="col card-group">
-    <div class="card p-4 shadow-sm rounded-4 bg-body-tertiary">
+    <div class="card pt-sm-4 p-md-4 shadow-sm rounded-4 bg-body-tertiary">
         <a href="@Project.Image" target="_blank">
-            <img class="bd-placeholder-img card-img-top mt-3"
+            <img class="bd-placeholder-img card-img-top mt-4"
                 style="height: 200px; max-width: 100%; margin: auto; object-fit: contain;" src="@Project.Image" />
         </a>
         <div class="card-body mt-3">
