--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -26,8 +26,10 @@
             <div style="font-family: unset; font-family: var(--font1) !important;">
 
         <section style="max-width: 920px">
+            <div class="card bg-body-tertiary shadow-sm">
+                <div class="card-body m-md-4">
         
-        <div class="d-flex pb-4 pt-4 mt-4">
+        <div class="d-flex pb-4">
             <div class="flex-grow-1">
                 <h2 id="experience" class="pt-0 mt-0">Experience</h2>
             </div>
@@ -83,10 +85,13 @@
                 </div>
 
             }
+               </div>   </div>
+
         </section>
 
         <section class="mt-4 mb-4" style="max-width: 920px">
-
+            <div class="card bg-body-tertiary shadow-sm">
+                <div class="card-body m-md-4">
             @if (resume is null)
             {
                 <text>Loading education...</text>
@@ -109,12 +114,14 @@
                     </div>
                 }
             }
-
+               </div>
+                    </div>
         </section>
 
         <section class="mt-4 mb-4" style="page-break-inside: avoid; max-width: 920px">
-
-             <div class="d-flex pt-4 pb-2 mt-4">
+            <div class="card bg-body-tertiary shadow-sm">
+                <div class="card-body m-md-4">
+             <div class="d-flex">
                 <div class="flex-grow-1">
                     <h2 id="skills" class="pt-0 mt-0">Skills</h2>
                 </div>
@@ -165,7 +172,8 @@
 
                 </div>
             }
-
+               </div>
+                    </div>
         </section>
                                 </div>
         }
