--- a/PersonalSite/Pages/Resume/ResumePage.razor.css
+++ b/PersonalSite/Pages/Resume/ResumePage.razor.css
@@ -1,3 +1,12 @@
+.card {
+    border: 0;
+}
+
+.card-footer {
+    border: 0;
+    background: none;
+}
+
 .grid-dl dt {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0.5em 0 0.5em 0;
