Update footer and header

--- a/PersonalSite/Shared/Footer.razor
+++ b/PersonalSite/Shared/Footer.razor
@@ -35,15 +35,8 @@
 
                     <li class="nav-item list-inline-item">
                         <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                            href="https://www.youtube.com/@@marna_li" target="_blank">
+                            href="https://www.youtube.com/@@marna_li" title="YouTube" target="_blank">
                             <i class="fab fa-2x fa-youtube"></i>
-                        </a>
-                    </li>
-
-                    <li class="nav-item list-inline-item">
-                        <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                            href="https://twitter.com/marna_li" title="X" target="_blank">
-                            <i class="fab fa-2x fa-x-twitter"></i>
                         </a>
                     </li>
 
@@ -51,6 +44,20 @@
                         <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                             href="https://www.linkedin.com/in/marinasundstrom" title="LinkedIn" target="_blank">
                             <i class="fab fa-2x fa-linkedin"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item list-inline-item">
+                        <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                            href="https://www.instagram.com/marna.li.s/" title="Instagram" target="_blank">
+                            <i class="fab fa-2x fa-instagram"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item list-inline-item">
+                        <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                            href="https://twitter.com/marna_li" title="X" target="_blank">
+                            <i class="fab fa-2x fa-x-twitter"></i>
                         </a>
                     </li>
                 </ul>
