--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -42,8 +42,22 @@
 
                 <li class="nav-item list-inline-item me-4 me-md-0">
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                        href="https://www.youtube.com/@@marna_li" target="_blank">
+                        href="https://www.youtube.com/@@marna_li" title="YouTube" target="_blank">
                         <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item list-inline-item me-4 me-md-0">
+                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                        href="https://www.linkedin.com/in/marinasundstrom" title="LinkedIn" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item list-inline-item me-4 me-md-0">
+                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                        href="https://www.instagram.com/marna.li.s/" title="Instagram" target="_blank">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </li>
 
@@ -51,13 +65,6 @@
                     <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
                         href="https://twitter.com/marna_li" title="X" target="_blank">
                         <i class="fab fa-x-twitter"></i>
-                    </a>
-                </li>
-
-                <li class="nav-item list-inline-ite me-4 me-md-0">
-                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                        href="https://www.linkedin.com/in/marinasundstrom" title="LinkedIn" target="_blank">
-                        <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
             </ul>
