--- a/PersonalSite/Shared/Footer.razor
+++ b/PersonalSite/Shared/Footer.razor
@@ -17,7 +17,7 @@
             <div class="col-6 col-lg-2 offset-lg-1 mb-3">
                 <h5>This site</h5>
                 <ul class="list-unstyled menu">
-                    <li class="mb-2"><a href="/about-me">About me</a></li>
+                    <li class="mb-2"><a href="/presentation">About me</a></li>
                     <li class="mb-2"><a href="/articles">Articles</a></li>
                     <li class="mb-2"><a href="/resume">Resume</a></li>
                     <li class="mb-2"><a href="/portfolio">Portfolio</a></li>
