--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -33,9 +33,6 @@
                 </li>
             </ul>
             <ul class="navbar-nav">
-                <NavMenuDivider OnlyOnSmall="true" />
-
-                <ThemeSelector />
 
                 <NavMenuDivider OnlyOnSmall="true" />
 
@@ -79,6 +76,11 @@
                                 <i class="fab fa-x-twitter icon-responsive"></i>
                             </a>
                         </li>
+
+                        <NavMenuDivider Class="mt-4 mt-md-0" />
+
+                        <ThemeSelector />
+
                     </ul>
                 </li>
             </ul>
