--- a/PersonalSite/Shared/ThemeSelector.razor
+++ b/PersonalSite/Shared/ThemeSelector.razor
@@ -18,7 +18,7 @@
   </symbol>
 </svg>
 
-<li class="nav-item dropdown bd-mode-toggle theme-selector me-4 me-md-0">
+<li class="nav-item dropdown bd-mode-toggle theme-selector me-4 me-md-0" style="padding-top: 0.05rem !important;">
   <a class="nav-link btn-bd-primary py-2 dropdown-toggle d-flex align-items-center opacity-50" id="bd-theme"
     aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
     <svg class="bi my-special theme-icon-active" width="1em" height="1em">
